# brokenithmrs

./: README.md
brokenithmrs-client/: Cargo.toml  manifest.yaml
brokenithmrs-client/src/: client.rs  fps_counter.rs  jni.rs  lib.rs  main.rs
brokenithmrs-server/: Cargo.toml
brokenithmrs-server/src/: main.rs
