[package]
name = "brokenithmrs"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib", "lib"]
[dependencies]
#  wgpu = "22.0.0"
egui = "0.29.1"
raw-window-handle = "0.6.2"
egui-wgpu = { version = "0.29.1",features = ["winit"] }
egui-winit = { version = "0.29.1", features = ["android-native-activity"] }
winit = { version = "0.30.5", features = ["android-native-activity"] }
pollster = "0.3.0"
android-activity = "0.6.0"
egui_extras = "0.29.1"
jni = "0.21.1"
ndk-context = "0.1.1"
instant = { version = "0.1.13", features = ["now"] }
preferences = "2.0.0"
serde = "1.0.215"
[profile.release]
strip = true
opt-level = 3 
[profile.release.package."*"]
opt-level = 3 
[profile.release.build-override]
opt-level = 3 
codegen-units = 16 
